tests/ui/feature-gates/feature-gate-marker_trait_attr.stderr
error[E0658]: the `#[marker]` attribute is an experimental feature
  --> $DIR/feature-gate-marker_trait_attr.rs:3:1
   |
LL | #[marker] trait ExplicitMarker {}
   | ^^^^^^^^^
   |
   = note: see issue #29864 <https://github.com/rust-lang/rust/issues/29864> for more information
   = help: add `#![feature(marker_trait_attr)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0658`.
